updated about me

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -6,13 +6,13 @@
             <!-- <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p> -->
         </div>
     </div>
-    <div class="row">
+    <div class="row ">
         <!-- first two icons -->
         {% for icon in site.author.skill_icon1 %}
         <div class="col-xs-2 wow fadeInLeft">
             <div class="team-member">
                 <div class="vote-icon">
-                    <i class="fa {{ icon.name }}"></i>
+                    <i class="fa {{ icon.name }}" style="color: #808080"></i>
                 </div>
             </div>
         </div>
@@ -20,7 +20,7 @@
         <!-- avatar -->
         <div class="col-xs-4">
             <div class="team-member wow zoomIn">
-                <img src="{{ site.author.avatar | prepend: site.baseurl }}" height="110" width="110" class="img-responsive img-circle" alt="">
+                <img src="{{ site.author.avatar | prepend: site.baseurl }}" height="150" width="150" class="img-responsive img-circle" alt="">
                 <h4><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</h4>
                 <ul class="list-inline social-icon">
                     {% if site.author.github_username %}
@@ -50,7 +50,7 @@
         <div class="col-xs-2 wow fadeInRight">
             <div class="team-member">
                 <div class="vote-icon">
-                    <i class="fa {{ icon.name }}"></i>
+                    <i class="fa {{ icon.name }}" style="color: #808080"></i>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
     </div>
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg wow zoomIn">
-            <p><span data-i18n="about_me.des">{{ site.author.desc }}</span></p>
+            <p><span style="font-size: 14pt; color: #808080" data-i18n="about_me.des">{{ site.author.desc }}</span></p>
         </div>
     </div>
 </div>
