--- a/static/css/style-purify.css
+++ b/static/css/style-purify.css
@@ -2282,7 +2282,7 @@ body.landing-page {
 }
 
 .landing-page section p {
-  color: #aeaeae;
+  color: #d2d2c6;
   font-size: 13px;
 }
 
@@ -2570,7 +2570,7 @@ body.landing-page {
 }
 
 .landing-page .gray-section {
-  background: #f4f4f4;
+  background: #b0b09b;
   margin-top: 60px;
 }
 
