--- a/static/css/style-purify.css
+++ b/static/css/style-purify.css
@@ -2596,6 +2596,11 @@ body.landing-page {
   background: #3385FF;
 }
 
+.landing-page .img-medium {
+    height: 68px;
+    width: 68px
+}
+
 .landing-page .img-small {
   height: 88px;
   width: 88px;
@@ -2771,4 +2776,8 @@ body.landing-page {
     padding: 9px 10px;
     border: none;
   }
+}
+
+.landing-page .img-scaled {
+   height: auto; width: auto; max-width: 200px; max-height: 200px;
 }
