--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -18,7 +18,7 @@
             <div class="col-sm-6 wow {% if loopindex == 1 %} fadeInLeft {% else %} fadeInRight {% endif %}">
             {% endif %}
               <div class="team-member">
-                  <img src="{{ project.img | prepend: site.baseurl }}" class="img-responsive img-circle img-small" alt="">
+                  <img src="{{ project.img | prepend: site.baseurl }}" class="img-responsive" style="height: auto; width: auto; max-width: 150px; max-height: 150px;" alt="">
                   <h4>
                   {% if project.pdf %}
                   <a href="{{ project.pdf | prepend: site.baseurl }}" target="_blank"><span class="navy">{{ project.name }}</span></a>
