--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7676,6 +7676,11 @@ body.landing-page {
     background: #3385FF
 }
 
+.landing-page .img-medium {
+    height: 68px;
+    width: 68px
+}
+
 .landing-page .img-small {
     height: 88px;
     width: 88px
@@ -8190,4 +8195,8 @@ body.rtls.top-navigation .footer.fixed {
 
 .rtls #right-sidebar.sidebar-open {
     left: 0
+}
+
+.landing-page .img-scaled {
+   height: auto; width: auto; max-width: 200px; max-height: 200px;
 }
