--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -38,5 +38,10 @@
           </div>
       {% endfor %}
     </div>
+	<div class="row">
+        <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
+            <strong>&copy; 2018 {{ site.author.first_name}} {{ site.author.last_name}}</strong></p>
+        </div>
+    </div>
 </div>
 <br>
