--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -21,7 +21,7 @@
         <div class="col-xs-4">
             <div class="team-member wow zoomIn">
                 <img src="{{ site.author.avatar | prepend: site.baseurl }}" height="150" width="150" class="img-responsive img-circle" alt="">
-                <h4><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</h4>
+                <h2><strong><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</strong></h2>
                 <ul class="list-inline social-icon">
                     {% if site.author.github_username %}
                     <li><a href="https://github.com/{{ site.author.github_username }}" target="blank"><i class="fa fa-github"></i></a></li>
