--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -11,8 +11,8 @@
         {% for icon in site.author.skill_icon1 %}
         <div class="col-xs-2 wow fadeInLeft">
             <div class="team-member">
-                <div class="vote-icon">
-                    <i class="fa {{ icon.name }}" style="color: #808080"></i>
+                <div class="vote-icon" style="margin-top: 100px">
+                    <i class="fa {{ icon.name }}" style="color: #808080; font-size: 50px"></i>
                 </div>
             </div>
         </div>
@@ -20,7 +20,7 @@
         <!-- avatar -->
         <div class="col-xs-4">
             <div class="team-member wow zoomIn">
-                <img src="{{ site.author.avatar | prepend: site.baseurl }}" height="150" width="150" class="img-responsive img-circle" alt="">
+                <img src="{{ site.author.avatar | prepend: site.baseurl }}" height="200" width="200" class="img-responsive img-circle" alt="">
                 <h2><strong><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</strong></h2>
                 <ul class="list-inline social-icon">
                     {% if site.author.github_username %}
@@ -49,8 +49,8 @@
         {% for icon in site.author.skill_icon2 %}
         <div class="col-xs-2 wow fadeInRight">
             <div class="team-member">
-                <div class="vote-icon">
-                    <i class="fa {{ icon.name }}" style="color: #808080"></i>
+                <div class="vote-icon" style="margin-top: 100px">
+                    <i class="fa {{ icon.name }}" style="color: #808080; font-size: 50px"></i>
                 </div>
             </div>
         </div>
