--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -12,7 +12,7 @@
         <div class="col-xs-2 wow fadeInLeft">
             <div class="team-member">
                 <div class="vote-icon" style="margin-top: 100px">
-                    <i class="fa {{ icon.name }}" style="color: #808080; font-size: 50px"></i>
+                    <i class="fa {{ icon.name }}" style="color: {{ icon.color }}; font-size: 65px"></i>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="col-xs-2 wow fadeInRight">
             <div class="team-member">
                 <div class="vote-icon" style="margin-top: 100px">
-                    <i class="fa {{ icon.name }}" style="color: #808080; font-size: 50px"></i>
+                    <i class="fa {{ icon.name }}" style="color: {{ icon.color }}; font-size: 65px"></i>
                 </div>
             </div>
         </div>
