updated skills for mobile

--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -6,15 +6,18 @@
         </div>
     </div>
 
-<div class="row" style="width: 100%">
-        <div class="" id="left_cavnas" style="float: left; width: 30%; height: 100%;">
-            <canvas id="{{ site.data.index.overall_skills.id }}"></canvas>             
+<div class="row features-block">
+        <!--<div class="" id="left_cavnas" style="float: left; width: 30%; height: 100%;">-->
+            <div class="wow zoomIn col-lg-6 col-lg-offset-3" id="left_cavnas">            
+            <canvas id="{{ site.data.index.overall_skills.id }}" height="500" width="500"></canvas>             
         </div>
-        <div class="" id="middle_cavnas" style="float: right; width: 30%; height: 100%;">
-           <canvas id="{{ site.data.index.library_skills.id }}"></canvas>
+        <!--<div class="" id="middle_cavnas" style="float: right; width: 30%; height: 100%;">-->
+        <div class="wow zoomIn col-lg-6 col-lg-offset-3" id="middle_cavnas">
+           <canvas id="{{ site.data.index.library_skills.id }}" height="500" width="500"></canvas>
         </div>
-        <div class="" id="right_cavnas" style="float: right; width: 30%; height: 100%;">
-           <canvas id="{{ site.data.index.programming_skills.id }}"></canvas>
+        <!--<div class="" id="right_cavnas" style="float: right; width: 30%; height: 100%;">-->
+            <div class="wow zoomIn col-lg-6 col-lg-offset-3" id="right_cavnas">
+           <canvas id="{{ site.data.index.programming_skills.id }}" height="500" width="500"></canvas>
         </div>
         <div class="col-lg-1"></div>
         <script>
