--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -43,5 +43,37 @@
             <strong>&copy; 2018 {{ site.author.first_name}} {{ site.author.last_name}}</strong></p>
         </div>
     </div>
+    <!-- TEST -->
+
+<script src="https://bibbase.org/show?bib=/static/assets/img/journals.bib&jsonp=1"></script>
+
+<!--<h6>Journals</h6><ul class="publications">
+          <script type="text/javascript">
+function showHideDiv(id) {
+    var e = document.getElementById(id);
+    if(e.style.display == null || e.style.display == "none") {
+        e.style.display = "block";
+    } else {
+        e.style.display = "none";
+    }
+}
+</script>
+  <li class="publication">
+    <div class="shortname">
+        [ASDF]
+      </div>
+    <div class="publication">
+      <span class="authors">A. BCD, E. FGH, and I.KLM. </span>
+      <span class="title">
+        <a href="static/assets/pdf/example.pdf">My Title.</a>
+      </span>
+      <span class="jtitle">ACM Transactions on Something</span>
+      <span class="jtitle_pages"> , 2016.</span>
+      <span class="links"><a href="static/assets/pdf/example.pdf">PDF</a> | <a href="static/assets/pdf/example.bib">Bibtex</a> | <a onclick="showHideDiv('ASDF')">Abstract</a></span>
+      <div class="mid" id="ASDF" style="DISPLAY: none; border:1px dashed gray; margin-top: 0.5cm; padding:15px; text-indent: 2em;">Abstract text asdafsadasdasdasdasdasdasd.</div>
+    </div>
+  </li>
+</ul>
+    <!-- TEST -->
 </div>
 <br>
