change to abs url

--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -45,7 +45,7 @@
     </div>
     <!-- TEST -->
 
-<script src="https://bibbase.org/show?bib=/static/assets/img/journals.bib&jsonp=1"></script>
+<script src="https://bibbase.org/show?bib=https://raw.githubusercontent.com/zokin/zokin.github.io/master/static/assets/bib/journals.bib&jsonp=1"></script>
 
 <!--<h6>Journals</h6><ul class="publications">
           <script type="text/javascript">
