--- a/static/css/bibbase.css
+++ b/static/css/bibbase.css
@@ -11,9 +11,9 @@
 
 .bibbase_group {
     /* background-color: #D0D0E0; */
-    background-color: #E0E0E0;
+    background-color: #807AAA;
     font-style: italic;
-    font-size: larger;
+    font-size: 26;
     text-shadow: 0px 0px 3px #FFFFFF;
     border-radius: 4px 4px 4px 4px;
     -moz-border-radius: 4px 4px 4px 4px;
