--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -38,7 +38,7 @@
           </div>
       {% endfor %}
     </div> -->
-    <h2 align="left" style="margin: 10pt; font-size: 26px; color: #3385FF; font-weight: bold;"><span>Journals</span></h2>
+    <h2 align="left" style="margin: 10pt; font-size: 26px; color: #3385FF; font-weight: bold;"><span>Articles</span></h2>
     <script src="https://bibbase.org/show?bib=https://raw.githubusercontent.com/zokin/zokin.github.io/master/static/assets/bib/journals.bib&jsonp=1&nocache=0&theme=default"></script>
 
     <h2 align="left" style="margin-top: 30pt; font-size: 26px; color: #3385FF; font-weight: bold;"><span>Conferences</span></h2>
