--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,18 @@
         ga('send', 'pageview');
       </script>
     {% endif %}
+	
+	
+<!--
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-147231916-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-147231916-2');
+</script>
+-->
 
 </body>
 </html>
