--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -34,7 +34,7 @@
     </div>
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-            <strong>&copy; 2015 - 2018 {{ site.author.first_name}} {{ site.author.last_name}}</strong></p>
+            <strong>&copy; 2020 {{ site.author.first_name}} {{ site.author.last_name}}</strong></p>
         </div>
     </div>
 </div>
