--- a/publication/template/index.html
+++ b/publication/template/index.html
@@ -834,14 +834,8 @@
 
 
   
-    
-  
 
 
-
-<a class="btn btn-outline-primary btn-page-header" href="/https:/www.iti.gr/iti/files/document/publications/RGB-D_09-03-2018.pdf" target="_blank" rel="noopener">
-  PDF
-</a>
 
 
 
@@ -851,14 +845,6 @@
 </a>
 
 
-
-  
-  
-    
-  
-<a class="btn btn-outline-primary btn-page-header" href="/http:/vcl.iti.gr/dataset/dataset-of-multiple-kinect2-rgb-d-streams/" target="_blank" rel="noopener">
-  Dataset
-</a>
 
 
 
@@ -873,14 +859,6 @@
 
 
 
-
-  
-  
-    
-  
-<a class="btn btn-outline-primary btn-page-header" href="/https:/youtu.be/RHViHg75kh8" target="_blank" rel="noopener">
-  Video
-</a>
 
 
 
@@ -916,9 +894,57 @@
   
     
   
+  <a class="btn btn-outline-primary btn-page-header" href="https://www.iti.gr/iti/files/document/publications/RGB-D_09-03-2018.pdf" target="_blank" rel="noopener">
+    
+    PDF
+  </a>
+
+  
+  
+  
+    
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary btn-page-header" href="http://vcl.iti.gr/dataset/dataset-of-multiple-kinect2-rgb-d-streams/" target="_blank" rel="noopener">
+    
+    Data
+  </a>
+
+  
+  
+  
+    
+  
+  
+  
+  
+  
+    
+  
   <a class="btn btn-outline-primary btn-page-header" href="https://ars.els-cdn.com/content/image/1-s2.0-S0031320318300657-mmc1.pdf" target="_blank" rel="noopener">
     
     Supplementary
+  </a>
+
+  
+  
+  
+    
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/RHViHg75kh8" target="_blank" rel="noopener">
+    
+    Video
   </a>
 
 
@@ -1280,6 +1306,8 @@ Supplementary notes can be added here, including [code, math, and images](https:
     <h3>Related</h3>
     <ul>
       
+      <li><a href="/publication/nevergrad/">Zeroth-Order Optimizer Benchmarking for 3D PerformanceCapture</a></li>
+      
       <li><a href="/talk/volumetric-video-tutorial/">Volumetric Video Tutorial</a></li>
       
       <li><a href="/publication/human4d/">HUMAN4D: A Human-Centric Multimodal Dataset for Motions and Immersive Media</a></li>
@@ -1287,8 +1315,6 @@ Supplementary notes can be added here, including [code, math, and images](https:
       <li><a href="/publication/xr360/">XR360: A Toolkit for Mixed 360 and 3D Productions</a></li>
       
       <li><a href="/publication/structurenet/">Deep Soft Procrustes for Markerless Volumetric Sensor Alignment</a></li>
-      
-      <li><a href="/publication/ddd/">Self-Supervised Deep Depth Denoising</a></li>
       
     </ul>
   </div>
